--- a/manifest.json
+++ b/manifest.json
@@ -10,7 +10,7 @@
   },
 
   "permissions": [
-    "webRequest", "webRequestBlocking", "<all_urls>"
+    "tabs", "webRequest", "webRequestBlocking", "cookies", "<all_urls>"
   ],
 
   "background": {
